--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,192 @@
 .App {
-  text-align: center;
+  color: aliceblue;
+  background: #000000;
+  height: 100%;
+  padding: 1px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.avengers-right-container {
+  background-color: aliceblue;
+  padding: 1px;
+  height: 100%;
+  width: 60%;
+  background: url(./avengers.png) right no-repeat;
+  background-size: 100%;
+  position: absolute;
+  right: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.avengers-left-container {
+  float: left;
+  margin: 10% 0 0 10%;
+  position: absolute;
+  width: 40%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@-webkit-keyframes fadeInRight {
   from {
-    transform: rotate(0deg);
+    opacity: 0;
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
   }
+
   to {
-    transform: rotate(360deg);
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
   }
+}
+
+@keyframes fadeInRight {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.fadeInRight {
+  -webkit-animation-name: fadeInRight;
+  animation-name: fadeInRight;
+}
+
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.fadeInLeft {
+  -webkit-animation-name: fadeInLeft;
+  animation-name: fadeInLeft;
+}
+
+@keyframes fontalicious {
+  0% {
+    font-family: "IBM Plex Mono", monospace;
+  }
+
+  10% {
+    font-family: "Teko", sans-serif;
+  }
+
+  20% {
+    font-family: "Source Code Pro", monospace;
+  }
+
+  30% {
+    font-family: "Silkscreen", cursive;
+  }
+
+  40% {
+    font-family: "Shadows Into Light", cursive;
+  }
+
+  50% {
+    font-family: "Satisfy", cursive;
+  }
+
+  60% {
+    font-family: "Rajdhani", sans-serif;
+  }
+
+  70% {
+    font-family: "Qwitcher Grypen", cursive;
+  }
+
+  80% {
+    font-family: "Michroma", sans-serif;
+  }
+
+  90% {
+    font-family: "Lobster", cursive;
+  }
+
+  99% {
+    font-family: "Inter", sans-serif;
+  }
+
+  100% {
+  }
+}
+
+.fontalicious {
+  animation-name: fontalicious;
+  animation-iteration-count: infinite;
+  animation-duration: 3s;
+}
+
+.project-title {
+  font-size: 500%;
+  position: absolute;
+}
+
+.project-description {
+  margin-top: 19%;
+  font-family: "Montserrat", sans-serif;
+  font-size: large;
+}
+
+.project-description-buttons {
+  display: flex;
+  flex-direction: row;
+  margin-right: 90px;
+}
+
+.proj-desc-btn {
+  margin: 40px 0 0 40px;
+  width: 150px;
+}
+
+#read-docs {
+  background: rgb(99, 98, 98);
+  border: black;
+}
+#read-docs:hover {
+  background: rgb(139, 138, 138);
+  border: black;
+}
+
+.page-1-container {
+  position: relative;
+  height: 100%;
+}
+.page-2-container {
+  height: 100%;
+  background-color: black;
 }
